# tier

./: .gitignore  CONTRIBUTING.md  README.md  openclaw.plugin.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
benchmarks/: harness.py  harness_v2.py  harness_v3.py  results.jsonl  results_4model.jsonl  results_semantic_full.jsonl  results_semantic_quick.jsonl  results_v2.jsonl  results_v2_full.jsonl  results_v3.jsonl  results_v3_full.jsonl
docs/: whitepaper.md  whitepaper.tex  whitepaper_outline.md
src/: index.ts
tests/: test_tier.py
tier_engine/: __init__.py  bridge.py  detector.py  embeddings.py  engine.py  errors.py  models.py  router.py  sdk_bridge.py
