[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "tier-engine"
version = "0.1.0"
description = "Tier-based tool routing for AI agents"
license = {text = "MIT"}
requires-python = ">=3.10"
[project.urls]
Homepage = "https://github.com/yantrikos/tier"
[tool.setuptools.packages.find]
where = ["."]
include = ["tier_engine*"]
